@@ -40,6 +40,36 @@ Kletka supports **Polyglot opening books** (`.bin` files), allowing you to explo
     - **→ / Enter** — select a variation
     - **←** — go back to the previous position
 
+### System Requirements for Books
+
+For opening book functionality, Kletka requires:
+
+- **Java 17 LTS** (Liberica Full JDK recommended)
+- JVM arguments (automatically applied when running from the launcher):
+
+--add-opens java.base/sun.nio.ch=ALL-UNNAMED
+
+--add-opens java.base/sun.misc=ALL-UNNAMED
+
+
+**Note:** If you're running Kletka from the command line, use:
+```bash
+java --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/sun.misc=ALL-UNNAMED -jar Kletka.jar
+```
+
+These arguments are required for fast Polyglot book operations using memory-mapped files.
+
+### Linux: Known Issues
+
+On **Debian Trixie / Ubuntu 24.04+** with **Wayland**, dialogs may not receive focus
+(keyboard works, mouse doesn't). This is a **known JavaFX 17 + GTK 3 + Wayland bug**.
+
+**Solution:** already included in Kletka — the app runs with
+
+`-Djdk.gtk.version=2`, 
+which uses GTK 2 via XWayland.
+---
+
 ### Recommended books:
 
 For best results, we recommend using the **`uho-pohl.bin`** opening book, which contains extensive high-quality opening variations.
@@ -59,19 +89,31 @@ Other popular sources:
 ## 🖥️ Screenshots
 
 ### English
-| ![Main Window](screenshots/Main_en.png) | ![PGN file browser](screenshots/Browser_en.png) |
-|------------------------------------------|--------------------------------------------------|
-| *Main interface*                          | *PGN browser*                                    |
+| ![Main Window](screenshots/Main_en.png)    | ![PGN file browser](screenshots/Browser_en.png)    |
+|--------------------------------------------|----------------------------------------------------|
+| *Main interface*                           | *PGN browser*                                      |
+
+| ![Book open](screenshots/book_open_en.png) | ![Book loaded](screenshots/book_loaded_en.png)     |
+|--------------------------------------------| -------------------------------------------------- |
+| *Open Polyglot Book*                       | *Polyglot Book Loaded*                             |
 
 ### Русский
-| ![Главное окно](screenshots/Main_ru.png) | ![Пгн файл обозреватель](screenshots/Browser_ru.png) |
-|-------------------------------------------|-----------------------------------------------------|
-| *Главный интерфейс*                       | *Обозреватель PGN*                                  |
+| ![Главное окно](screenshots/Main_ru.png)        | ![Пгн файл обозреватель](screenshots/Browser_ru.png)  |
+|-------------------------------------------------|-------------------------------------------------------|
+| *Главный интерфейс*                             | *Обозреватель PGN*                                    |
+
+| ![Открытие книги](screenshots/book_open_ru.png) | ![Загруженная книга](screenshots/book_loaded_ru.png)  |
+| -------------------------------------------     | ----------------------------------------------------- |
+| *Открытие полиглот книги*                       | *Загруженная Полиглот книга*                          |
 
 ### 中文 (Chinese)
 | ![主窗口](screenshots/Main_zh.png) | ![PGN 浏览器](screenshots/Browser_zh.png) |
 |-------------------------------------|-------------------------------------------|
 | *主界面*                            | *PGN 浏览器*                              |
+
+| ![打开开局库](screenshots/book_open_zh.png) | ![已加载的开局库](screenshots/book_loaded_zh.png)  |
+| ------------------------------------------- | -------------------------------------------------- |
+| *打开 Polyglot 开局库*                      | *已加载的 Polyglot 开局库*                         |
 
 ---
 
@@ -79,12 +121,15 @@ Other popular sources:
 
 ### English
 | ![Main Window](screenshots/Main_en.png) | ![PGN file browser](screenshots/Browser_en.png) |
+| ![Book open](screenshots/book_open_en.png) | ![Book loaded](screenshots/book_loaded_en.png)     |
 
 ### Русский
 | ![Главное окно](screenshots/Main_ru.png) | ![Пгн файл обозреватель](screenshots/Browser_ru.png) |
+| ![Открытие книги](screenshots/book_open_ru.png) | ![Загруженная книга](screenshots/book_loaded_ru.png)  |
 
 ### 中文 (Chinese)
 | ![主窗口](screenshots/Main_zh.png) | ![PGN 浏览器](screenshots/Browser_zh.png) |
+| ![打开开局库](screenshots/book_open_zh.png) | ![已加载的开局库](screenshots/book_loaded_zh.png)  |
 
 ---
 
@@ -98,21 +143,30 @@ Download `Kletka.dmg`, open it, and drag `Kletka.app` to the `Applications` fold
 
 ### Linux (Debian/Ubuntu)
 ```bash
-sudo dpkg -i kletka_1.2.0-1_amd64.deb
-````
-🛠️ Building from Source
+sudo dpkg -i kletka*.deb
+```
+
+## 🛠️ Building from Source
 
 ### Prerequisites
 - **Java 17 (Liberica Full JDK recommended)** — download from [BellSoft](https://bell-sw.com/pages/downloads/#/java-17-lts)
 - **Maven** — install via `brew install maven` (macOS) or `sudo apt install maven` (Linux)
 
-````bash
+### Important JVM Arguments for Development
+When running from your IDE, add these VM options:
+
+--add-opens java.base/sun.nio.ch=ALL-UNNAMED
+--add-opens java.base/sun.misc=ALL-UNNAMED
+
+This ensures full Polyglot book support during development.
+
+```bash
 git clone https://github.com/AndreyKhrypach/Kletka.git
 cd Kletka
 mvn clean package
-````
+```
 Platform-specific builds
-````bash
+```bash
 # Windows
 
 mvn clean package -P windows
@@ -124,9 +178,9 @@ mvn clean package -P linux
 # macOS
 
 mvn clean package -P mac
-````
+```
 ---
-🧠 Setting up Stockfish
+## 🧠 Setting up Stockfish
 
 Kletka uses the Stockfish UCI engine for analysis. You need to install it separately:
 
@@ -139,34 +193,34 @@ Windows
     In Kletka, go to Engine → Configure Engine and select the stockfish.exe file
 
 Linux (Debian/Ubuntu)
-````bash
+```bash
 sudo apt install stockfish
-````
+```
 
 Then in Kletka, go to Engine → Configure Engine and select the stockfish binary.
 
 macOS
-````bash
+```bash
 brew install stockfish
-````
+```
 
 Then in Kletka, go to Engine → Configure Engine and select the stockfish binary.
 
 ---
 
-📄 License
+## 📄 License
 
 This project is licensed under the GNU General Public License v3.0.
 See the LICENSE file for details.
 
 ---
 
-👨‍💻 Author
+## 👨‍💻 Author
 
 Andrey Khrypach
 
 ---
 
-⭐ Support
+## ⭐ Support
 
 If you like this project, please ⭐ it on GitHub!
